--- a/week6_report/开题报告.md
+++ b/week6_report/开题报告.md
@@ -20,6 +20,20 @@ UCORE到多核RISC-V处理器的移植(石振兴)
 
 ## 实验方案
 
+结合rcore step-by-step tutorial和ucore tutorial的优点
+
+应当能够让学习者照着step-by-step tutorial抄一遍/粘贴一遍能得到自己的ucore, 读一遍tutorial就可以了解整个ucore的基本原理和实现细节. 难以使得文档是面面俱到的操作系统原理讲解, 但要尽量覆盖ucore实现的时候涉及的知识点.
+
+tutorial的不同章节是增量(incremental)的关系.
+
+类似rcore step-by-step tutorial, 提供tutorial每个阶段的参考代码
+
+对于每一章, 写完/整理完代码才好写文档.
+
+实验指导书是否要现在设计好?
+
+按8个lab切分工作?
+
 ## 小组分工
 
 ## 其他问题
