update week6 report

--- a/week6_report/开题报告.md
+++ b/week6_report/开题报告.md
@@ -10,13 +10,31 @@ riscv64-ucore 小组开题报告
 
 ## **相关工作介绍**
 
-基于x86的ucore实验指导书 (清华大学操作系统历届教学团队)
+#### 基于x86的ucore实验指导书 (清华大学操作系统历届教学团队)
 
-基于riscv64的rcore step-by-step tutorial(刘丰源, 吴一凡)
+ucore实验指导书的结构: 以lab为组织单元, 每个lab首先给出实验目的, 实验内容, 项目组成, 然后进行原理讲解
 
-基于riscv32和Berkeley Bootloader的bbl-ucore(张蔚)
+关于代码的阅读: 提供基本代码和参考答案(无法避免抄袭所以干脆对所有人都直接给答案?), 要求编写实验报告. 代码里有很多注释帮助理解, 但还是要学生自己扎到代码里面阅读.
 
-UCORE到多核RISC-V处理器的移植(石振兴)
+优点: 提供参考答案防止实现遇到困难的时候消耗时间过多? 
+
+缺点: 需要学生自己扎到代码里面读? x86硬件比较麻烦?
+
+#### 基于riscv64的rcore step-by-step tutorial(刘丰源, 吴一凡)
+
+rcore step-by-step tutorial的结构: 以帮助学生自己一行行构建自己的os为目标, 按照功能模块组织章节(实际很多章节的划分类似于不同lab的划分). 每章进行原理讲解, 然后给出详细的代码解释. 学生可以跟着tutorial把代码基本读一遍.
+
+实验题目和step-by-step tutorial相对独立, 简单交代了题目和任务, 比现在ucore的实验指导简陋.
+
+优点: step-by-step的构造方式, 使得学生可以自己"写"(或者"抄")出一个OS, 增加成就感和对OS整体的把握
+
+缺点: 简陋, 仓促上马, 没有丰富的challenge
+
+#### 基于riscv32和Berkeley Bootloader的bbl-ucore(张蔚)
+
+#### UCORE到多核RISC-V处理器的移植(石振兴)
+
+
 
 ## 实验方案
 
@@ -32,7 +50,7 @@ tutorial的不同章节是增量(incremental)的关系.
 
 实验指导书是否要现在设计好?
 
-按8个lab切分工作?
+按8个lab切分工作? 加上lab0的实验准备?是否可以将实验准备设计成一个1分的作业?
 
 ## 小组分工
 
